Replace reference to sun.misc.BASE64Decoder with use of commons-codec.